--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@
 		--chart-3: 197 37% 24%;
 		--chart-4: 43 74% 66%;
 		--chart-5: 27 87% 67%;
-		--sidebar-background: 0 0% 98%;
+		--sidebar-background: 0 0% 90%;
 		--sidebar-foreground: 240 5.3% 26.1%;
 		--sidebar-primary: 240 5.9% 10%;
 		--sidebar-primary-foreground: 0 0% 98%;
@@ -91,13 +91,16 @@
 		backdrop-filter: blur(15px) saturate(200%);
 		-webkit-backdrop-filter: blur(15px) saturate(200%);
 	}
-}
 
-@layer base {
-	* {
-		@apply border-border;
+	.react-calendar {
+		@apply !w-full !border-none;
 	}
-	body {
-		@apply bg-background text-foreground;
+
+	.react-calendar__navigation button {
+		@apply !bg-secondary text-secondary-foreground hover:bg-secondary/80;
+	}
+
+	.react-calendar__tile--active {
+		@apply !bg-primary !text-primary-foreground !hover:bg-primary/90;
 	}
 }
