--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,8 @@
 		--accent-foreground: 220.9 39.3% 11%;
 		--destructive: 0 84.2% 60.2%;
 		--destructive-foreground: 210 20% 98%;
+		--success: 142.1 76.2% 36.3%;
+		--success-foreground: 355.7 100% 97.3%;
 		--border: 220 13% 70%;
 		--input: 220 13% 91%;
 		--ring: 262.1 83.3% 57.8%;
@@ -56,6 +58,8 @@
 		--accent-foreground: 210 20% 98%;
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 210 20% 98%;
+		--success: 142.1 70.6% 30%;
+		--success-foreground: 144.9 80.4% 10%;
 		--border: 215 27.9% 25%;
 		--input: 215 27.9% 16.9%;
 		--ring: 263.4 70% 50.4%;
@@ -90,17 +94,5 @@
 	.glass {
 		backdrop-filter: blur(15px) saturate(200%);
 		-webkit-backdrop-filter: blur(15px) saturate(200%);
-	}
-
-	.react-calendar {
-		@apply !w-full !border-none;
-	}
-
-	.react-calendar__navigation button {
-		@apply !bg-secondary text-secondary-foreground hover:bg-secondary/80;
-	}
-
-	.react-calendar__tile--active {
-		@apply !bg-primary !text-primary-foreground !hover:bg-primary/90;
 	}
 }
